--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
 			"react-dom": "^18.2.0",
 			"react-scripts": "5.0.1",
 			"web-vitals": "^2.1.4",
+			"@mui/material": "^5.2.5",
+			"@emotion/react": "^11.7.1",
+			"@emotion/styled": "^11.6.0",
 			"react-router-dom": "^6.2.1"
     },
     "scripts": {
